@@ -31,7 +31,7 @@
 
 #include "version_major.h"
 
-#define LIBAVFILTER_VERSION_MINOR  39
+#define LIBAVFILTER_VERSION_MINOR  40
 #define LIBAVFILTER_VERSION_MICRO 100
 
 
