@@ -17,6 +17,7 @@ version 5.1:
 - multiply video filter
 - PGS subtitle frame merge bitstream filter
 - blurdetect filter
+- tiltshelf audio filter
 
 
 version 5.0:
